# Server

./: CMakeLists.txt  CloseCommand.cpp  Command.h  CommandsManager.cpp  CommandsManager.h  GameHandle.cpp  GameHandle.h  HandleClient.cpp  HandleClient.h  HandleGame.cpp  HandleGame.h  JoinCommand.cpp  ListCommand.cpp  PlayCommand.cpp  Server.cpp  Server.h  StartCommand.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  mainServer.cpp  makefile  serverInfo.txt
