cmake_minimum_required(VERSION 3.8)
project(untitled2)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS -pthread)
add_executable(untitled2 mainServer.cpp Server.h Server.cpp CommandsManager.cpp CommandsManager.h Command.h StartCommand.cpp HandleClient.cpp HandleClient.h HandleGame.cpp HandleGame.h CloseCommand.cpp PlayCommand.cpp JoinCommand.cpp ListCommand.cpp Task.h ThreadPool.h ThreadPool.cpp)